feat-ALI-V28c4: Added diplomacy relation list to external info page

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,8 +12,8 @@
 Следующий релиз
 ===============
 
-Текущая версия VV28c3
-=====================
+Текущая версия V28c4
+====================
 
 Project "SuperNova.WS" Release 28 Release Candidate
 "Chatting Alliance Moderators Bashing Operators"
@@ -40,6 +40,8 @@ Project "SuperNova.WS" Release 28 Release Candidate
     должна  потвердить  предложение  об  изменении  по   ссылке   "Переговоры",
     доступной главе Альянса (исключения из данного правила изложены ниже).  Там
     же можно сделать предложение об  изменении отношений другому Альянсу
+    Информация  о  дипломатических  отношениях  Альянса  так  же  доступна  для
+    просмотра не членам Альянса
     Отношения между Альянсами бывают следующие:
       1. Нейтралитет. Отношение  по  умолчанию.  Нет  никаких  ограничений  или
       бонусов
