feat-QST-V28.1a0: Quests

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,14 +9,26 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Следующий релиз
-===============
+Следующий релиз V28.1 - "Quest for release"
+===========================================
 
-Текущая версия V28c6
-====================
+Текущая версия V28.1a0
+======================
+
+[!] Квесты: Добавлена подсистема квестов.
+     1. Администратор сервера может самостоятельно добавлять  новые  квесты.  В
+     настоящий момент доступны квесты на постройку зданий  и  на  исследования.
+     Наградой является ТМ. Доступ к конструктору квестов осуществляется из меню
+     "Квесты" страницы  администрирования.  Создание  квестов  доступно  только
+     Администратору сервера (auth_level = 3)
+     2.  Игрок  может  просматривать  список  доступных  квестов  и  их  статус
+     (выполнен или не выполнен)
+     3. По выполнению квеста игроку высылается письмо с уведомлением
+     4. Общее количество  и  количество  выполненных  квестов  видно  игроку  в
+     топбаре
 
 Project "SuperNova.WS" Release 28 Release Candidate
-"Chatting Alliance Moderators Bashing Operators"
+"Chatting Moderators Diplomaticly Bashing Alliance Operators"
 ========================================================================
 
 [!] Чат: Полностью  переписан  внутренний  чат.
