misc-QST: Adjusted quest table

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -26,6 +26,8 @@
      3. По выполнению квеста игроку высылается письмо с уведомлением
      4. Общее количество  и  количество  выполненных  квестов  видно  игроку  в
      топбаре
+     5. Администратор может посмотреть выполненные квесты игрока  по  ссылке  в
+     его профиле (Поиск через админпанель)
 
 Project "SuperNova.WS" Release 28 Release Candidate
 "Chatting Moderators Diplomaticly Bashing Alliance Operators"
