doc: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -28,6 +28,13 @@
      топбаре
      5. Администратор может посмотреть выполненные квесты игрока  по  ссылке  в
      его профиле (Поиск через админпанель)
+     6.   Игроки,   превысившие   условия   квеста,    автоматически    получат
+     вознаграждение при следующей проверке на  критерии  выполнения.  Например,
+     если целью квеста является постройка шахты 10го уровня, то  при  постройке
+     шахты  выше  9го  уровня  на  любой  планете   игрок   получит   квестовое
+     вознаграждение. То же самое верно и  по  отношению  к  уничтожению  шахты.
+     Однако, если при уничтожении шахты её уровень окажется ниже 10го, то игрок
+     вознаграждения не получит, хотя он уже и имел шахту 10го уровня
 
 Project "SuperNova.WS" Release 28 Release Candidate
 "Chatting Moderators Diplomaticly Bashing Alliance Operators"
