doc: readme and changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -15,8 +15,7 @@
 Текущая версия V28c6
 ====================
 
-Project "SuperNova.WS" Release 28 Release Candidate
-"Chatting Alliance Moderators Bashing Operators"
+Project "SuperNova.WS" Release 28 "Chatting Diplomacy Alliance Bashing"
 ========================================================================
 
 [!] Чат: Полностью  переписан  внутренний  чат.
@@ -31,17 +30,17 @@ Project "SuperNova.WS" Release 28 Release Candidate
       "обмылка", как раньше
       7. Содержимое языкового файла chat.mo отфильтровано и влито в system.mo
       8. Множество других добавлений и усовершенствований
-[!] Альянсы:  Добавленв  подсистема  дипломатии  (главная  внутренняя  страница
-    Альянса, таблица "Дипломатия"). Глава Альянса может начинать  переговоры  и
-    принимать  предложения  от  других  Альянсов.
-    Нельзя сделать предложение текущих отношений (т.е. если Альянсы находятся в
-    отношениях "Война" нельзя опять предложить отношение "Война")
-    В общем случае что бы изменилось отношения между Альянсами, другая  сторона
-    должна  потвердить  предложение  об  изменении  по   ссылке   "Переговоры",
-    доступной главе Альянса (исключения из данного правила изложены ниже).  Там
-    же можно сделать предложение об  изменении отношений другому Альянсу
-    Информация  о  дипломатических  отношениях  Альянса  так  же  доступна  для
-    просмотра не членам Альянса
+[!] Альянсы: Добавленв подсистема дипломатии
+    Информация о текущих дипломатических  отношениях  Альянса  отображается  на
+    странице информации об Альянсе и доступна для просмотра любому игроку
+    Глава Альянса может начинать переговоры и принимать предложения  от  других
+    Альянсов, выбрав пункт "Переговоры" в заголовке таблицы дипломатии. Там  же
+    можно сделать предложение об изменении отношений  другому  Альянсу.  Нельзя
+    сделать предложение  текущих  отношений  (т.е.  если  Альянсы  находятся  в
+    отношениях "Война" нельзя  опять  предложить  отношение  "Война")  В  общем
+    случае что бы изменилось отношения между Альянсами, другая  сторона  должна
+    потвердить предложение об изменении по ссылке "Переговоры", доступной главе
+    Альянса (исключения из данного правила изложены ниже).
     Отношения между Альянсами бывают следующие:
       1. Нейтралитет. Отношение  по  умолчанию.  Нет  никаких  ограничений  или
       бонусов
