SQL: Updated DB dump

--- a/docs/install.txt
+++ b/docs/install.txt
@@ -116,8 +116,8 @@ innodb_log_buffer_size          8388608
  1. Создайте БД "supernova" в UTF-8
  2. Создайте в MySQL пользователя "supernova_user" и дайте ему  все  права  на
     базу "supernova"
- 3. Загрузите в БД файл docs/supernova.sql
- 4. Скопируйте файл docs/config.php.sample в  корневой  каталог  Сверхновой  и
+ 3. Загрузите в БД файл /docs/supernova.sql
+ 4. Скопируйте файл /docs/config.php.sample в  корневой  каталог  Сверхновой  и
     переименуйте его в config.php
  5. В файле /config.php в строке
     "pass"       => "MYSQL_PASSWORD", // Пароль доступа MySQL сервера.
@@ -126,9 +126,10 @@ innodb_log_buffer_size          8388608
     "secretword" => "SUPERNOVA",      // Ключевое слово для создания Cookies
     замените SUPERNOVA какой-либо последовательностью символов
  7. Загрузите дистрибутив Сверхновой в корневой каталог веб-сервера
- 8. Зайдите в игру с админскими правами. По умолчанию админский  логин/пароль
-    admin/admin
- 9. Смените пароль администратора на странице /options.php
+ 8. Зайдите в игру с админскими правами. По умолчанию админский аккаунт:
+    Логин:  'admin' (без кавычек)
+    Пароль: 'admin' (без кавычек)
+ 9. ОБЯЗАТЕЛЬНО смените пароль администратора на странице /options.php
 10. Настройте игру на странице /admin/settings.php
 11. Сверхновая готова к запуску!
 
@@ -140,6 +141,8 @@ innodb_log_buffer_size          8388608
 интуитивно понятны из названий переменных
 Так же некоторые настройки игры хранятся в файле /includes/constants.php
 Все изменения - на ваш страх и риск
+ВНИМАНИЕ!!! Если был изменен префикс таблиц ('sn_' по  умолчанию),  то  так  же
+надо изменить названия таблиц перед заливкой файла /docs/supernova.sql !
 
 
 Обновление до последней версии
@@ -175,9 +178,9 @@ innodb_log_buffer_size          8388608
 автоматически запуском файла update.php
 
 В СН относительно RR изменено местоположение баннера. Раньше ссылка была
-/scripts/createbanner.php
+  /scripts/createbanner.php
 Новая ссылка
-/banner.php
+  /banner.php
 
 Используйте средства веб-сервера (mod_rewrite) для перенаправления запросов.  В
 частности, правило для lighttpd будет следующим:
