doc: readme and changelog editing

--- a/docs/install.txt
+++ b/docs/install.txt
@@ -147,6 +147,8 @@ innodb_log_buffer_size          8388608
 
 Обновление до последней версии
 ==============================
+0. ВНИМАНИЕ!!! ПЕРЕД ОБНОВЛЕНИЕМ СДЕЛАЙТЕ РЕЗЕРВНУЮ КОПИЮ БАЗЫ ДАННЫХ И  ФАЙЛОВ
+   ДВИЖКА С ТЕМ, ЧТО БЫ МОЖНО БЫЛО ОТКАТИТЬСЯ В СЛУЧАЕ НЕУДАЧНОГО ОБНОВЛЕНИЯ!!!
 1. Залогиньтесь в игру через аккаунт с правами Администратора
 2. ВНИМАНИЕ!!! Перед обновленем сервер ОБЯЗАТЕЛЬНО нужно  остановить.  Делается
    это так: под Администратором в левом меню появится пункт  "Администратор"  -
