fix-ALI-V28.1a1: Fixed ally members can't leave Alliance

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,8 +12,8 @@
 Следующий релиз
 ===============
 
-Текущая версия V28c6
-====================
+Текущая версия V28.1a1
+======================
 
 Project "SuperNova.WS" Release 28 "Chatting Diplomacy Alliance Bashing"
 ========================================================================
