--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,10 +9,10 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Следующий релиз V28.1 - "Quest for release"
-===========================================
+Следующий релиз V28.1 - "Simple - quest"
+========================================
 
-Текущая версия V28.1a1
+Текущая версия V28.1a2
 ======================
 
 [!] Квесты: Добавлена подсистема квестов
@@ -37,6 +37,13 @@
      вознаграждение. То же самое верно и  по  отношению  к  уничтожению  шахты.
      Однако, если при уничтожении шахты её уровень окажется ниже 10го, то игрок
      вознаграждения не получит, хотя он уже и имел шахту 10го уровня
+
+[+] Империя: Добавлено цветовое кодирование для производящих структур.  Уровень
+    производства, выставленный на странице "Ресурсы",  кодируется  цветом  фона
+    соответствующей ячейки: зеленый -  100%,  желтый  -  80-90%%,  оранжевый  -
+    70-50%%, красный - 40-10%%, цвет  фона  -  0%  или  структура  не  является
+    производящей. Пропорционально уровню производительности  меняется  и  длина
+    кодированной полоски
 
 [~] Топбар: По клику на  счетчике  флотов  и  экспедиций  открывается  страница
     флотов в полете
