--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V28.1 - "Simple - quest"
 ========================================
 
-Текущая версия V28.1a2
+Текущая версия V28.1a3
 ======================
 
 [!] Квесты: Добавлена подсистема квестов
@@ -44,9 +44,18 @@
     70-50%%, красный - 40-10%%, цвет  фона  -  0%  или  структура  не  является
     производящей. Пропорционально уровню производительности  меняется  и  длина
     кодированной полоски
+[+] Интерфейс: Новый тип  сортировки  планет  -  по  общему  количество  полей.
+    Учитываются терраформеры (на планетах) и лунные базы (на лунах)
 
 [~] Топбар: По клику на  счетчике  флотов  и  экспедиций  открывается  страница
     флотов в полете
+[~] Список планет: Изменена цветовая  кодировка  полосы  застройки:  зеленый  -
+    менее 50% застройки, желтый - не меньше 50% и меньше 80%,  оранжевый  -  не
+    меньше 80% и меньше 100%, красный - 100% застройки
+[~] Список планет: На полосы застройки добавилось  застроенное  и  максимальное
+    количество полей на планете
+[~] Список планет: Сортировка учитывается в списке планет на  страницах  "Обзор
+    планеты" и "Империя"
 
 [%] Альянсы: Исправлена ошибка невозможности выхода из Альянса
 
