--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V28.1 - "Simple - quest"
 ========================================
 
-Текущая версия V28.1a3
+Текущая версия V28.1a4
 ======================
 
 [!] Квесты: Добавлена подсистема квестов
@@ -56,6 +56,8 @@
     количество полей на планете
 [~] Список планет: Сортировка учитывается в списке планет на  страницах  "Обзор
     планеты" и "Империя"
+[~] Флоты: Переоформлена страница своза ресурсов. Теперь так же считается сумма
+    выбранных для своза ресурсов по каждой планете
 
 [%] Альянсы: Исправлена ошибка невозможности выхода из Альянса
 
