--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V28.1 - "Simple - quest"
 ========================================
 
-Текущая версия V28.1a4
+Текущая версия V28.1a5
 ======================
 
 [!] Квесты: Добавлена подсистема квестов
@@ -20,17 +20,19 @@
      2. В настоящий момент доступны квесты на постройку зданий  и  обороны,  на
      исследование и на постройку кораблей (триггер срабатывает при  наличии  на
      планете Х кораблей одного типа)
-     3. Наградой является ТМ. Доступ к конструктору квестов  осуществляется  из
-     меню "Квесты" страницы администрирования. Создание квестов доступно только
-     Администратору сервера (auth_level = 3)
-     4.  Игрок  может  просматривать  список  доступных  квестов  и  их  статус
+     3. За квесты можно выставлять награду - определенного количество одного из
+     ресурсов: металл, кристалл, дейтрий или ТМ.
+     4. Доступ к конструктору квестов осуществляется из меню "Квесты"  страницы
+     администрирования. Создание квестов доступно только Администратору сервера
+     (auth_level = 3)
+     5.  Игрок  может  просматривать  список  доступных  квестов  и  их  статус
      (выполнен или не выполнен)
-     5. По выполнению квеста игроку высылается письмо с уведомлением
-     6. Общее количество  и  количество  выполненных  квестов  видно  игроку  в
+     6. По выполнению квеста игроку высылается письмо с уведомлением
+     7. Общее количество  и  количество  выполненных  квестов  видно  игроку  в
      топбаре
-     7. Администратор может посмотреть выполненные квесты игрока  по  ссылке  в
+     8. Администратор может посмотреть выполненные квесты игрока  по  ссылке  в
      его профиле (Поиск через админпанель)
-     8.   Игроки,   превысившие   условия   квеста,    автоматически    получат
+     9.   Игроки,   превысившие   условия   квеста,    автоматически    получат
      вознаграждение при следующей проверке на  критерии  выполнения.  Например,
      если целью квеста является постройка шахты 10го уровня, то  при  постройке
      шахты  выше  9го  уровня  на  любой  планете   игрок   получит   квестовое
