misc-IMP: Adjusted Imperium page a bit

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -60,6 +60,7 @@
     планеты" и "Империя"
 [~] Флоты: Переоформлена страница своза ресурсов. Теперь так же считается сумма
     выбранных для своза ресурсов по каждой планете
+[~] Империя: Переформатирована страница Империи
 
 [%] Альянсы: Исправлена ошибка невозможности выхода из Альянса
 
