feat-MSG-28.1a6: Full rewrote of message system

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,10 +9,10 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Следующий релиз V28.1 - "Simple - quest"
-========================================
+Следующий релиз V28.1 - "Quest messaging"
+=========================================
 
-Текущая версия V28.1a5
+Текущая версия V28.1a6
 ======================
 
 [!] Квесты: Добавлена подсистема квестов
@@ -39,6 +39,27 @@
      вознаграждение. То же самое верно и  по  отношению  к  уничтожению  шахты.
      Однако, если при уничтожении шахты её уровень окажется ниже 10го, то игрок
      вознаграждения не получит, хотя он уже и имел шахту 10го уровня
+[!] Сообщения: Полностью переписана  система  сообщений.  В  системе  произошли
+    следующие изменения:
+    1. Можно писать письма любому игроку! Форма создания нового  письма  теперь
+    корректно обрабатывает  имена  игроков,  введенных  в  строку  "Кому".  Эта
+    возможность доступна из списка  категорий  сообщений  по  ссылке  "Написать
+    сообщение" в самом низу таблицы категорий
+    2. В списке писем теперь работает чекбокс в заголовке. Клик на нем приведет
+    к выбору всех сообщений. Повторный клик - к снятию всех отметок
+    3. Добавлен дополнительный диапазон для удаления сообщений - "Все сообщения
+    данной категории". Внимание! В категории "Все сообщения" его выбор приведет
+    к полной очистке почтового ящика!
+    4. При  первом  открытии  страницы  создания  нового  сообщения  больше  не
+    выскакивают угрожающие красные надписи
+    5. Счетчик  сообщений в  топбаре  работает  без  задержек. Т.е. если  игрок
+    перешел  в  категорию  с  непрочитанными  сообщениями,  счетчик   изменится
+    соответствующим образом  сразу  же  после  перехода,  а  не  при  следующей
+    загрузке страницы
+    6. Множество мелких стилистических доработок
+    7. Оптимизированы алгоритмы работы подсистемы сообщений, а так же  почти  в
+    два раза уменьшен объем  передаваемой  информации  от  клиента  к  серверу.
+    Особенно это заметно при удалении большого количества сообщений
 
 [+] Империя: Добавлено цветовое кодирование для производящих структур.  Уровень
     производства, выставленный на странице "Ресурсы",  кодируется  цветом  фона
