doc: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -84,6 +84,8 @@
 [~] Империя: Переформатирована страница Империи
 
 [%] Альянсы: Исправлена ошибка невозможности выхода из Альянса
+[%] Антибашинг: Исправлена ошибка в подсистеме  техобслуживания  из-за  которой
+    удалялись нужные записи из таблицы башинга и расчет волн сбрасывался в ноль
 
 
 Project "SuperNova.WS" Release 28 "Chatting Diplomacy Alliance Bashing"
