fix-UNI-28.1a7: Fixed wrong icon placement on Universe and wrong extra event on Overview for fleet after issuing 'Return' order

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V28.1 - "Quest messaging"
 =========================================
 
-Текущая версия V28.1a6
+Текущая версия V28.1a7
 ======================
 
 [!] Квесты: Добавлена подсистема квестов
@@ -86,6 +86,18 @@
 [%] Альянсы: Исправлена ошибка невозможности выхода из Альянса
 [%] Антибашинг: Исправлена ошибка в подсистеме  техобслуживания  из-за  которой
     удалялись нужные записи из таблицы башинга и расчет волн сбрасывался в ноль
+[%] Вселенная: Исправлена ошибка  с  неправильным  наложением  иконки  летящего
+    флота, когда флоту отдана команда "Обратно"
+[%] Обзор планеты: Исправлена ошибка с добавлением лишнего события, когда флоту
+    отдана команда "Обратно"
+[%] Обзор планеты: Исправлена возможность появления фантомных лун. Существующие
+    фантомные луны удалены
+
+[@] Update: Изменен апдейтер так, что бы не  выдавать  ошибки  при  апгрейде  с
+    версии <26. Так же введена конфигурация времени блокировки базы апдейтером
+[@] Update: Добавлена процедура валидизации  таблицы  игроков  по  имени  и  ИД
+    Альянса. Так же добавлены constraint на эти поля
+[@] GIT: GIT теперь так же игнорирует SQL-файлы в каталоге бэкапа
 
 
 Project "SuperNova.WS" Release 28 "Chatting Diplomacy Alliance Bashing"
