doc: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -60,6 +60,11 @@
     7. Оптимизированы алгоритмы работы подсистемы сообщений, а так же  почти  в
     два раза уменьшен объем  передаваемой  информации  от  клиента  к  серверу.
     Особенно это заметно при удалении большого количества сообщений
+[!]  Сообщения:  Настройка  автоматических  уведомлений.  Теперь  в  настройках
+    пользователя можно отключить получения определенных категории сообщений.  В
+    этот список входят: Шпионские отчёты, Военные отчёты,  Отчеты  переработки,
+    Прибытие флота, Отчёты экспедиций, Сообщения очереди построек.
+[!] Настройки: Полностью переписана система настроек пользователя
 
 [+] Империя: Добавлено цветовое кодирование для производящих структур.  Уровень
     производства, выставленный на странице "Ресурсы",  кодируется  цветом  фона
@@ -92,12 +97,19 @@
     отдана команда "Обратно"
 [%] Обзор планеты: Исправлена возможность появления фантомных лун. Существующие
     фантомные луны удалены
+[%] JS: Исправлена ошибка в js_timer, приводящая к некорректной работе  таймера
+    после таймера с типом "date&time with delta"
 
 [@] Update: Изменен апдейтер так, что бы не  выдавать  ошибки  при  апгрейде  с
     версии <26. Так же введена конфигурация времени блокировки базы апдейтером
 [@] Update: Добавлена процедура валидизации  таблицы  игроков  по  имени  и  ИД
     Альянса. Так же добавлены constraint на эти поля
 [@] GIT: GIT теперь так же игнорирует SQL-файлы в каталоге бэкапа
+[@] Локализация: Немного оптимизирована локализация
+[@] Настройки: Изменена подсистема дополнительных настроек пользователя
+[@] Системное: sys_get_param_int_val теперь так же  обрабатывает  непрописанные
+    чекбоксы - те, которые возвращают "on"  и  "off".  Для  таких  значение  он
+    возвращаеет соответственно "1" и "{$default}"
 
 
 Project "SuperNova.WS" Release 28 "Chatting Diplomacy Alliance Bashing"
