--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,9 +12,11 @@
 Следующий релиз V28.1 - "Quest messaging"
 =========================================
 
-Текущая версия V28.1a7
+Текущая версия V28.1a8
 ======================
 
+[!] Readme: Добавил раздел  "Благодарности".  Желающие  вычеркнуть  себя  могут
+    написать мне об этом в личку
 [!] Квесты: Добавлена подсистема квестов
      1. Администратор сервера может самостоятельно добавлять  новые  квесты
      2. В настоящий момент доступны квесты на постройку зданий  и  обороны,  на
@@ -74,6 +76,7 @@
     кодированной полоски
 [+] Интерфейс: Новый тип  сортировки  планет  -  по  общему  количество  полей.
     Учитываются терраформеры (на планетах) и лунные базы (на лунах)
+[+] Боевой отчет: Локализован
 
 [~] Топбар: По клику на  счетчике  флотов  и  экспедиций  открывается  страница
     флотов в полете
@@ -87,6 +90,7 @@
 [~] Флоты: Переоформлена страница своза ресурсов. Теперь так же считается сумма
     выбранных для своза ресурсов по каждой планете
 [~] Империя: Переформатирована страница Империи
+[~] Боевой отчет: Добавлено количество  убитых  корблей  в  предыдущем  раунде.
 
 [%] Альянсы: Исправлена ошибка невозможности выхода из Альянса
 [%] Антибашинг: Исправлена ошибка в подсистеме  техобслуживания  из-за  которой
