--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -99,7 +99,7 @@
     флота, когда флоту отдана команда "Обратно"
 [%] Обзор планеты: Исправлена ошибка с добавлением лишнего события, когда флоту
     отдана команда "Обратно"
-[%] Обзор планеты: Исправлена возможность появления фантомных лун. Существующие
+[%] Вселенная: Исправлена возможность  появления  фантомных  лун.  Существующие
     фантомные луны удалены
 [%] JS: Исправлена ошибка в js_timer, приводящая к некорректной работе  таймера
     после таймера с типом "date&time with delta"
