--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,8 +12,8 @@
 Следующий релиз V28.1 - "Quest messaging"
 =========================================
 
-Текущая версия V28.1a8
-======================
+Текущая версия V28.1a10
+=======================
 
 [!] Readme: Добавил раздел  "Благодарности".  Желающие  вычеркнуть  себя  могут
     написать мне об этом в личку
@@ -103,6 +103,8 @@
     фантомные луны удалены
 [%] JS: Исправлена ошибка в js_timer, приводящая к некорректной работе  таймера
     после таймера с типом "date&time with delta"
+[%] Флоты:  Исправлена  ошибка  обработки  миссии  "Транспорт"  если   планета
+    назначения не существует
 
 [@] Update: Изменен апдейтер так, что бы не  выдавать  ошибки  при  апгрейде  с
     версии <26. Так же введена конфигурация времени блокировки базы апдейтером
