feat-MSG-28.1a11: Added new class of message - 'Administrator messages'. Re-enabled 'Que messages' class. Theese can be disabled

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V28.1 - "Quest messaging"
 =========================================
 
-Текущая версия V28.1a10
+Текущая версия V28.1a11
 =======================
 
 [!] Readme: Добавил раздел  "Благодарности".  Желающие  вычеркнуть  себя  могут
@@ -77,6 +77,25 @@
 [+] Интерфейс: Новый тип  сортировки  планет  -  по  общему  количество  полей.
     Учитываются терраформеры (на планетах) и лунные базы (на лунах)
 [+] Боевой отчет: Локализован
+[+] Сообщения: Добавлена новый класс сообщений "Сообщения Администрации". К ним
+    относятся:
+    1. Сообщения системы квестов
+    2. Новости сервера
+    3. Сообщения Администрации
+    Уведомления этого класса НЕ МОГУТ быть отключены в настройках пользователя
+[+] Сообщения:  Восстановлена  функциональноксть  класса  сообщений  "Сообщения
+    очереди построек". К ним относятся:
+    1. Уведомления о  завершении  исследований.  Уведомление  высылается  после
+       входа на страницу исследований
+    2. Уведомления об окончании работы верфи на планете. Уведомление высылается
+       по окончании очереди строительства Верфи
+    3. Уведомление об окончалии строительных работ на  планете  (постройка  или
+       разрушение здания). Уведомление высылается пакетно в  полуавтоматическом
+       режиме.  Это  означает,  что  сообщение  генерируется  каждый  раз   при
+       обращении к планете (сканирование шпионажом  или  игроком,  переключение
+       активной планеты игроком итд). При  этом  в  сообщение  указываются  все
+       изменения, произошедшие на момент обращения
+    Уведомления этого класса могут быть отключены в настройках пользователя
 
 [~] Топбар: По клику на  счетчике  флотов  и  экспедиций  открывается  страница
     флотов в полете
