--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V28.1 - "Quest messaging"
 =========================================
 
-Текущая версия V28.1a11
+Текущая версия V28.1a12
 =======================
 
 [!] Readme: Добавил раздел  "Благодарности".  Желающие  вычеркнуть  себя  могут
@@ -96,6 +96,9 @@
        активной планеты игроком итд). При  этом  в  сообщение  указываются  все
        изменения, произошедшие на момент обращения
     Уведомления этого класса могут быть отключены в настройках пользователя
+[+] Флоты: Добавлена возможность отключения запрета  прокачки  транспортировкой
+    ресурсов от более слабого игрока более сильному. Опция "Запрет прокачки" на
+    странице настроек сервера
 
 [~] Топбар: По клику на  счетчике  флотов  и  экспедиций  открывается  страница
     флотов в полете
