fix-FLT-28.1a13: Fixed bug that allows attack in ACS weak players

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V28.1 - "Quest messaging"
 =========================================
 
-Текущая версия V28.1a12
+Текущая версия V28.1a13
 =======================
 
 [!] Readme: Добавил раздел  "Благодарности".  Желающие  вычеркнуть  себя  могут
@@ -113,6 +113,8 @@
     выбранных для своза ресурсов по каждой планете
 [~] Империя: Переформатирована страница Империи
 [~] Боевой отчет: Добавлено количество  убитых  корблей  в  предыдущем  раунде.
+[~] Флоты+Сообщения: Приглашение в САБ теперь  относится  к  категории  "Боевые
+    отчеты", а не к категории "Сообщения от игроков"
 
 [%] Альянсы: Исправлена ошибка невозможности выхода из Альянса
 [%] Антибашинг: Исправлена ошибка в подсистеме  техобслуживания  из-за  которой
@@ -127,6 +129,7 @@
     после таймера с типом "date&time with delta"
 [%] Флоты:  Исправлена  ошибка  обработки  миссии  "Транспорт"  если   планета
     назначения не существует
+[%] Флоты: Исправлена ошибка, позволяющая атаковать в САБе более слабого игрока
 
 [@] Update: Изменен апдейтер так, что бы не  выдавать  ошибки  при  апгрейде  с
     версии <26. Так же введена конфигурация времени блокировки базы апдейтером
