--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -96,9 +96,6 @@
        активной планеты игроком итд). При  этом  в  сообщение  указываются  все
        изменения, произошедшие на момент обращения
     Уведомления этого класса могут быть отключены в настройках пользователя
-[+] Флоты: Добавлена возможность отключения запрета  прокачки  транспортировкой
-    ресурсов от более слабого игрока более сильному. Опция "Запрет прокачки" на
-    странице настроек сервера
 
 [~] Топбар: По клику на  счетчике  флотов  и  экспедиций  открывается  страница
     флотов в полете
@@ -142,6 +139,9 @@
     чекбоксы - те, которые возвращают "on"  и  "off".  Для  таких  значение  он
     возвращаеет соответственно "1" и "{$default}"
 [@] SQL: Исправлен SQL-файл
+[@] Флоты: Добавлена возможность отключения запрета  прокачки  транспортировкой
+    ресурсов от более слабого игрока более сильному. Опция "Запрет прокачки" на
+    странице настроек сервера
 
 
 Project "SuperNova.WS" Release 28 "Chatting Diplomacy Alliance Bashing"
