feat-MSG-28.1a14: Click on navbar message indicators open related message list

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V28.1 - "Quest messaging"
 =========================================
 
-Текущая версия V28.1a13
+Текущая версия V28.1a14
 =======================
 
 [!] Readme: Добавил раздел  "Благодарности".  Желающие  вычеркнуть  себя  могут
@@ -112,6 +112,9 @@
 [~] Боевой отчет: Добавлено количество  убитых  корблей  в  предыдущем  раунде.
 [~] Флоты+Сообщения: Приглашение в САБ теперь  относится  к  категории  "Боевые
     отчеты", а не к категории "Сообщения от игроков"
+
+[#] Навбар: Клик на индикаторе сообщений Администрации, Альянса или от  другого
+    игрока сразу открвает просмотр соответствующих сообщений
 
 [%] Альянсы: Исправлена ошибка невозможности выхода из Альянса
 [%] Антибашинг: Исправлена ошибка в подсистеме  техобслуживания  из-за  которой
