misc-INT-28.1a15: Now if planets > 5 they shows in two columns on planet overview. Also moon didn't shows in planet overview as intended

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V28.1 - "Quest messaging"
 =========================================
 
-Текущая версия V28.1a14
+Текущая версия V28.1a15
 =======================
 
 [!] Readme: Добавил раздел  "Благодарности".  Желающие  вычеркнуть  себя  могут
@@ -31,7 +31,7 @@
      (выполнен или не выполнен)
      6. По выполнению квеста игроку высылается письмо с уведомлением
      7. Общее количество  и  количество  выполненных  квестов  видно  игроку  в
-     топбаре
+     навбаре
      8. Администратор может посмотреть выполненные квесты игрока  по  ссылке  в
      его профиле (Поиск через админпанель)
      9.   Игроки,   превысившие   условия   квеста,    автоматически    получат
@@ -54,7 +54,7 @@
     к полной очистке почтового ящика!
     4. При  первом  открытии  страницы  создания  нового  сообщения  больше  не
     выскакивают угрожающие красные надписи
-    5. Счетчик  сообщений в  топбаре  работает  без  задержек. Т.е. если  игрок
+    5. Счетчик  сообщений в  навбаре  работает  без  задержек. Т.е. если  игрок
     перешел  в  категорию  с  непрочитанными  сообщениями,  счетчик   изменится
     соответствующим образом  сразу  же  после  перехода,  а  не  при  следующей
     загрузке страницы
@@ -97,7 +97,7 @@
        изменения, произошедшие на момент обращения
     Уведомления этого класса могут быть отключены в настройках пользователя
 
-[~] Топбар: По клику на  счетчике  флотов  и  экспедиций  открывается  страница
+[~] Навбар: По клику на  счетчике  флотов  и  экспедиций  открывается  страница
     флотов в полете
 [~] Список планет: Изменена цветовая  кодировка  полосы  застройки:  зеленый  -
     менее 50% застройки, желтый - не меньше 50% и меньше 80%,  оранжевый  -  не
@@ -112,9 +112,11 @@
 [~] Боевой отчет: Добавлено количество  убитых  корблей  в  предыдущем  раунде.
 [~] Флоты+Сообщения: Приглашение в САБ теперь  относится  к  категории  "Боевые
     отчеты", а не к категории "Сообщения от игроков"
+[~] Обзор планеты: Теперь если планет больше  5,  то  они  показываются  в  две
+    колонки
 
 [#] Навбар: Клик на индикаторе сообщений Администрации, Альянса или от  другого
-    игрока сразу открвает просмотр соответствующих сообщений
+    игрока сразу открывает просмотр соответствующих сообщений
 
 [%] Альянсы: Исправлена ошибка невозможности выхода из Альянса
 [%] Антибашинг: Исправлена ошибка в подсистеме  техобслуживания  из-за  которой
@@ -261,8 +263,8 @@ Project "SuperNova.WS" Release 28 "Chatting Diplomacy Alliance Bashing"
       Остальные просто не будут подключаться.
       3.1. Примечание к следствию 3 - собственно, так было и раньше - все равно
       исследование могло проводиться только на одной планете
-[+] Топбар: Переработана ячейка сообщений
-[+] Топбар:  Добавлено  количество  флотов  и  экспедиций  в  полете  и  всего.
+[+] Навбар: Переработана ячейка сообщений
+[+] Навбар:  Добавлено  количество  флотов  и  экспедиций  в  полете  и  всего.
     Количество флотов и экспедиций в  полете  интерактивно:  оно  автоматически
     изменяется в соответствие с происходящими событиями - прибытие, возвращение
     и окончание миссии флота (как они должны были произойти на момент  загрузки
@@ -1701,7 +1703,7 @@ Project "SuperNova.WS" Release 17 (2010-09-23 14:01)
     избавился от файла timer.js
 [%] Пофиксил логику вычисления производства (ресурсы в час). Оно, правда, кроме
     отображения ни на что не влияло, зато теперь  правильно  тикают  ресурсы  в
-    топбаре и правильно показывает производство на странице "Империя"
+    навбаре и правильно показывает производство на странице "Империя"
 
 2010-09-03 23:21
 [~] Добавлен большой восклицательный знак на изображение  планеты,  на  которую
