feat-FLT-26.1a16: Now it is possible to setup server to allow HOLD on weak co-ally planet

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -114,6 +114,8 @@
     отчеты", а не к категории "Сообщения от игроков"
 [~] Обзор планеты: Теперь если планет больше  5,  то  они  показываются  в  две
     колонки
+[~] Мировые  константы:  Добавлен  вывод  информации  о  разешении  прокачки  и
+    разрешении удержания на слабом соаловце
 
 [#] Навбар: Клик на индикаторе сообщений Администрации, Альянса или от  другого
     игрока сразу открывает просмотр соответствующих сообщений
@@ -144,9 +146,19 @@
     чекбоксы - те, которые возвращают "on"  и  "off".  Для  таких  значение  он
     возвращаеет соответственно "1" и "{$default}"
 [@] SQL: Исправлен SQL-файл
-[@] Флоты: Добавлена возможность отключения запрета  прокачки  транспортировкой
-    ресурсов от более слабого игрока более сильному. Опция "Запрет прокачки" на
+[@] Флоты: Добавлена возможность разрешения прокачки транспортировкой  ресурсов
+    от более слабого  игрока  более  сильному.  Опция  "Разрещиь  прокачку"  на
     странице настроек сервера
+[@] Настройки:  Добавлена  опция  сервера,  разрешающая  удержание  на  слабом
+    со-аловце. Опция "Разрешить  удержание  на  слабом  соаловце"  на  странице
+    настроек сервера
+[@] Настройки: Теперь флаг  прокачки  по  умолчанию  отключен  и  его  действие
+    инвертировано: невыставленный флаг ЗАПРЕЩАЕТ  прокачку,  а  выставленный  -
+    разрешает. Таки образом, по умолчанию прокачка (отправка транспортов  более
+    сильному   игроку)   отключена,   а   соответствующая   опция   равна    0.
+    Соответствующие изменения  автоматически  внесены  в  базу  данных,  однако
+    рекомендуется проверить настройки после обновления
+[@] Апдейтер: Исправлена ошибка добавления внешних ключей к таблице users
 
 
 Project "SuperNova.WS" Release 28 "Chatting Diplomacy Alliance Bashing"
