work-29c0: Release 29 Release Candidate

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,11 +9,14 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Следующий релиз V28.1 - "Quest messaging"
+Следующий релиз V30
 =========================================
 
-Текущая версия V28.1a15
-=======================
+Текущая версия V29с0
+====================
+
+Project "SuperNova.WS" Release 29 "Quest messaging"
+=======================================================================
 
 [!] Readme: Добавил раздел  "Благодарности".  Желающие  вычеркнуть  себя  могут
     написать мне об этом в личку
