fix-UNI-29c1: Fixed incorrect recyclers counting on Universe

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -10,13 +10,13 @@
  [*] ToDo - см. changelog.todo
 
 Следующий релиз V30
-=========================================
+===================
 
-Текущая версия V29с0
+Текущая версия V29с1
 ====================
 
 Project "SuperNova.WS" Release 29 "Quest messaging"
-=======================================================================
+===================================================
 
 [!] Readme: Добавил раздел  "Благодарности".  Желающие  вычеркнуть  себя  могут
     написать мне об этом в личку
@@ -122,6 +122,8 @@ Project "SuperNova.WS" Release 29 "Quest messaging"
 
 [#] Навбар: Клик на индикаторе сообщений Администрации, Альянса или от  другого
     игрока сразу открывает просмотр соответствующих сообщений
+[#] Вселенная:  Во  всплывающем  меню  на  поле  обломков  добавлена  индикация
+    количества летящих переработчиков игрока
 
 [%] Альянсы: Исправлена ошибка невозможности выхода из Альянса
 [%] Антибашинг: Исправлена ошибка в подсистеме  техобслуживания  из-за  которой
@@ -137,7 +139,11 @@ Project "SuperNova.WS" Release 29 "Quest messaging"
 [%] Флоты:  Исправлена  ошибка  обработки  миссии  "Транспорт"  если   планета
     назначения не существует
 [%] Флоты: Исправлена ошибка, позволяющая атаковать в САБе более слабого игрока
+[%] Вселенная: Исправлены ошибка  индикации  на  поле  обломков  чужих  летящих
+    переработчиков  и  ошибка   невозможности   послать   переработчики   через
+    всплывающее меню, если уже на то же поле летят чужие переработчики
 
+[@] SQL: Обновлен дамп БД до версии 29
 [@] Update: Изменен апдейтер так, что бы не  выдавать  ошибки  при  апгрейде  с
     версии <26. Так же введена конфигурация времени блокировки базы апдейтером
 [@] Update: Добавлена процедура валидизации  таблицы  игроков  по  имени  и  ИД
@@ -148,19 +154,12 @@ Project "SuperNova.WS" Release 29 "Quest messaging"
 [@] Системное: sys_get_param_int_val теперь так же  обрабатывает  непрописанные
     чекбоксы - те, которые возвращают "on"  и  "off".  Для  таких  значение  он
     возвращаеет соответственно "1" и "{$default}"
-[@] SQL: Исправлен SQL-файл
 [@] Флоты: Добавлена возможность разрешения прокачки транспортировкой  ресурсов
-    от более слабого  игрока  более  сильному.  Опция  "Разрещиь  прокачку"  на
+    от более слабого игрока  более  сильному.  Опция  "Разрешить  прокачку"  на
     странице настроек сервера
 [@] Настройки:  Добавлена  опция  сервера,  разрешающая  удержание  на  слабом
     со-аловце. Опция "Разрешить  удержание  на  слабом  соаловце"  на  странице
     настроек сервера
-[@] Настройки: Теперь флаг  прокачки  по  умолчанию  отключен  и  его  действие
-    инвертировано: невыставленный флаг ЗАПРЕЩАЕТ  прокачку,  а  выставленный  -
-    разрешает. Таки образом, по умолчанию прокачка (отправка транспортов  более
-    сильному   игроку)   отключена,   а   соответствующая   опция   равна    0.
-    Соответствующие изменения  автоматически  внесены  в  базу  данных,  однако
-    рекомендуется проверить настройки после обновления
 [@] Апдейтер: Исправлена ошибка добавления внешних ключей к таблице users
 
 
