--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V30
 ===================
 
-Текущая версия V29с1
+Текущая версия V29с2
 ====================
 
 Project "SuperNova.WS" Release 29 "Quest messaging"
@@ -142,6 +142,9 @@ Project "SuperNova.WS" Release 29 "Quest messaging"
 [%] Вселенная: Исправлены ошибка  индикации  на  поле  обломков  чужих  летящих
     переработчиков  и  ошибка   невозможности   послать   переработчики   через
     всплывающее меню, если уже на то же поле летят чужие переработчики
+[%] Бой: В отчете правильно указывается количество захваченных ресурсов
+[%] Бой: Исправлены предупреждения, выдающиеся в случае,  когда  какой-либо  из
+    флотов пустой
 
 [@] SQL: Обновлен дамп БД до версии 29
 [@] Update: Изменен апдейтер так, что бы не  выдавать  ошибки  при  апгрейде  с
