fix-OPT-29c3: Fixed wrongly allowance to go to vacancy when building or researching on non-main planet

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,8 +12,8 @@
 Следующий релиз V30
 ===================
 
-Текущая версия V29с2
-====================
+Текущая версия V29с2 RC2
+========================
 
 Project "SuperNova.WS" Release 29 "Quest messaging"
 ===================================================
@@ -145,6 +145,8 @@ Project "SuperNova.WS" Release 29 "Quest messaging"
 [%] Бой: В отчете правильно указывается количество захваченных ресурсов
 [%] Бой: Исправлены предупреждения, выдающиеся в случае,  когда  какой-либо  из
     флотов пустой
+[%] Настройки: Исправлена  ошибка,  позволяющая  уйти  в  отпуск  когда  что-то
+    строится или исследуется на неосновной планете
 
 [@] SQL: Обновлен дамп БД до версии 29
 [@] Update: Изменен апдейтер так, что бы не  выдавать  ошибки  при  апгрейде  с
