fix-FLT-29c4: Fixed messages when detecting/destroying spy fleet

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -119,6 +119,7 @@ Project "SuperNova.WS" Release 29 "Quest messaging"
     колонки
 [~] Мировые  константы:  Добавлен  вывод  информации  о  разешении  прокачки  и
     разрешении удержания на слабом соаловце
+[~] Шпионаж: Изменены сообщения при уничтожении разведфлота
 
 [#] Навбар: Клик на индикаторе сообщений Администрации, Альянса или от  другого
     игрока сразу открывает просмотр соответствующих сообщений
