--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,8 +12,8 @@
 Следующий релиз V30
 ===================
 
-Текущая версия V29с2 RC2
-========================
+Текущая версия V29d
+===================
 
 Project "SuperNova.WS" Release 29 "Quest messaging"
 ===================================================
