fix-UNI-29d2: Fixed error creating new planet on some MySQL configurations

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,8 +12,16 @@
 Следующий релиз V30
 ===================
 
-Текущая версия V29d
-===================
+Текущая версия V29d2
+====================
+
+[!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
+    игрока. Возможность включается администратором сервера в настройках - опция
+    "Разрешить  пересылку  ЛС  на  email".  После  этого  в  настройках  игрока
+    появляются дополнительные опции для всех категорий входящих сообщений
+
+[%] Вселенная:  Исправлена  ошибка  создания  новой  планеты  при  регистрации,
+    возникающая при определенных настройках MySQL
 
 Project "SuperNova.WS" Release 29 "Quest messaging"
 ===================================================
