--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V30
 ===================
 
-Текущая версия V29d2
+Текущая версия V29d3
 ====================
 
 [!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
@@ -20,8 +20,25 @@
     "Разрешить  пересылку  ЛС  на  email".  После  этого  в  настройках  игрока
     появляются дополнительные опции для всех категорий входящих сообщений
 
+[~] Отладка: Теперь при отключенной  глобальной  отладке  не  генерируется  лог
+    запросов
+[~] Обновление: Автоапдейтер на время работы отключает отладку вне  зависимости
+    от глобальных настроек
+[~] Обновление: Оптимизирована работа апдейтера для апгрейда с 25-28 релизов
+[~] Обновление: Апдейтер использует собственные процедуры запросов к БД
+
 [%] Вселенная:  Исправлена  ошибка  создания  новой  планеты  при  регистрации,
     возникающая при определенных настройках MySQL
+[%] Настройки:  Исправлена  ошибка  сохранения   настроек,   возникающая   при
+    определенных настройках MySQL
+
+[@] Логи: Изменения темной материи  вынесены  из  глобального  лога в отдельную
+    таблицу. Это  существенно  облегчило  поиск  неисправностей  на  сервере  и
+    подозрительных действий пользователей. Старые записи перенесены в отдельную
+    таблицу
+[@] БД: Все существующие таблицы сконвертированы в UTF8
+[@] БД: Все существующие таблицы переведены на InnoDB
+
 
 Project "SuperNova.WS" Release 29 "Quest messaging"
 ===================================================
