feat-FLT-29d4: Now antibashing settings can be changed. Also they shows on server info page

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,13 +12,17 @@
 Следующий релиз V30
 ===================
 
-Текущая версия V29d3
+Текущая версия V29d4
 ====================
 
 [!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
     игрока. Возможность включается администратором сервера в настройках - опция
     "Разрешить  пересылку  ЛС  на  email".  После  этого  в  настройках  игрока
     появляются дополнительные опции для всех категорий входящих сообщений
+
+[+] Антибашинг: Добавлена возможность настройки системы антибашинга на страницу
+    настроек сервера
+[+] Мировые константы: Добавлена информация о текущих настройках антибашинга
 
 [~] Отладка: Теперь при отключенной  глобальной  отладке  не  генерируется  лог
     запросов
