misc-DB-29d5: Autoupdater speeded up for tables already in InnoDB and UTF8

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -30,6 +30,8 @@
     от глобальных настроек
 [~] Обновление: Оптимизирована работа апдейтера для апгрейда с 25-28 релизов
 [~] Обновление: Апдейтер использует собственные процедуры запросов к БД
+[~] Обновление:  Ускорен   автоапдейтер   при   повторном   запуске   на   уже
+    сконвертированных таблицах
 
 [%] Вселенная:  Исправлена  ошибка  создания  новой  планеты  при  регистрации,
     возникающая при определенных настройках MySQL
