fix-SQL-29d6: Fixed index error in users table

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V30
 ===================
 
-Текущая версия V29d4
+Текущая версия V29d6
 ====================
 
 [!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
@@ -37,6 +37,7 @@
     возникающая при определенных настройках MySQL
 [%] Настройки:  Исправлена  ошибка  сохранения   настроек,   возникающая   при
     определенных настройках MySQL
+[%] SQL: Исправлена ошибка с индексами в таблице users
 
 [@] Логи: Изменения темной материи  вынесены  из  глобального  лога в отдельную
     таблицу. Это  существенно  облегчило  поиск  неисправностей  на  сервере  и
