fix-SYS-29d8: Fixes in maintenance rouitne

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,10 +9,10 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Следующий релиз V30
-===================
+Следующий релиз V29.1
+=====================
 
-Текущая версия V29d7
+Текущая версия V29d8
 ====================
 
 [!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
@@ -38,6 +38,7 @@
 [%] Настройки:  Исправлена  ошибка  сохранения   настроек,   возникающая   при
     определенных настройках MySQL
 [%] SQL: Исправлена ошибка с индексами в таблице users
+[%] Обслуживание: Исправлена ошибка при обслуживании таблицы Альянсов
 
 [@] Логи: Изменения темной материи  вынесены  из  глобального  лога в отдельную
     таблицу. Это  существенно  облегчило  поиск  неисправностей  на  сервере  и
